# ai_drived_robot

./: .dockerignore  .env  .gitignore  .wifi_last_ip  AGENTS.md  CHANGELOG.md  docker-compose.yml  screenlog.0
.githooks/: pre-commit
.github/workflows/: ci.yml
backend/operator/: __init__.py  cli.py  esp32_link.py  esp32_ws_link.py  pyproject.toml  server.py
backend/operator/api/: __init__.py  routes.py
backend/operator/models/: __init__.py  api.py
backend/operator/services/: __init__.py  dependencies.py  operator_service.py  wifi_config.py  wifi_discovery.py  wifi_registry.py
backend/operator/tests/: conftest.py  test_api_routes.py  test_camera_config.py  test_log_parser.py  test_parsing.py  test_shelf_map.py  test_transport_control.py  test_wifi_discovery.py  test_wifi_mac_persistence.py  test_wifi_registry.py  test_ws_link.py
docker/: backend.Dockerfile  frontend.Dockerfile  frontend.nginx.conf
docs/: BOM.md  ICD — Протокол обмена ESP32↔UNO.md  RBM-Robot_Architecture.md  commit-hooks.md  deploy-guide.md  implementation-plan.md  operator-cli-reference.md  operator.md  settings-redesign-summary.md  wire.md
docs/diagrams/: 02_C4_Container_Robot.puml  03_C4_Component_ESP32_UNO.puml  04_Sequence_PickPlace.puml  05_Wiring_Robot.puml
docs/testing/: basic-motion-test.md
firmware/: README.md  platformio.ini  screenlog.0
firmware/src/esp32/: bt.cpp  bt.h  i2c_link.h  main.cpp  planner.h  shelf_map.hpp  utils.h  vision_color.cpp  vision_color.h
firmware/src/esp32/include/: camera_http.hpp  camera_pins.hpp  cli_handler.hpp  cli_ws.hpp  config.hpp  i2c_link.hpp  log_sink.hpp  sdkconfig.h  shelf_map.hpp  vision_color.hpp  wifi_link.hpp
firmware/src/esp32/src/: camera_http.cpp  cli_ws.cpp  (+6 more)
firmware/src/uno/: config.h  icd.h  main.cpp  mecanum.h  rbm_uno.ino
firmware/src_minimal/: main.cpp
firmware/src_minimal_test/: main.cpp
firmware/tools/: plot_telemetry.py
frontend/web/: index.html  package.json  pnpm-lock.yaml  vite.config.js
frontend/web/src/: App.jsx  constants.js  main.jsx  shelfMap.js  style.css
scripts/: flash_firmware.sh  operator_serial_bridge.sh  operator_stack.sh  operator_stack_docker.sh  run_all_tests.sh
tools/operator/: __init__.py  cli.py  esp32_link.py  log_parser.py  pyproject.toml  server.py  start_operator_stack.sh  stop_operator_stack.sh
tools/operator/tests/: test_camera_config.py  test_log_parser.py  test_parsing.py  test_shelf_map.py
tools/operator/web/: index.html  package.json  pnpm-lock.yaml  vite.config.js
tools/operator/web/src/: main.js  shelfMap.spec.js  style.css
(+15 files in other folders)
